# uplift-analysis

./: .coveragerc  .isort.cfg  CHANGELOG.rst  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: continuous_integration.yml
docs/examples/: binary.py
docs/source/: badges.rst  conf.py  index.rst  installation.rst  introduction.rst  tutorials.rst  uplift_analysis.data.rst  uplift_analysis.evaluation.rst  uplift_analysis.utils.rst  uplift_analysis.visualization.rst
docs/source/tutorials/: Tutorial.ipynb
tests/: test_data.py  test_evaluation.py  test_scoring.py  test_utils.py  test_visualization.py
uplift_analysis/: data.py  evaluation.py  scoring.py  utils.py  visualization.py
