[metadata]
name = uplift_analysis
version = 0.0.1
author = Dvir Ben Or
author_email = dvirbeno@playtika.com
description = A Python library providing analysis utilities for uplift modeling techniques.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PlaytikaResearch/uplift-analysis
project_urls =
    Bug Tracker = https://github.com/PlaytikaResearch/uplift-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True
setup_requires =
    setuptools>=52.0.0
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    seaborn>=0.11

[options.extras_require]
develop =
    flake8>=3.9.2
    ipython>=7.0
    nbsphinx>=0.8.4
    pandoc>=1.0.2
    pre-commit>=2.12.1
    pytest>=6.2.4
    setuptools>=52.0.0
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.2
    wheel>=0.36.2
    build
    recommonmark
    coverage
    pytest-cov

[flake8]
max-line-length = 120